fix(views): use template, typo partial

--- a/web/views/layouts/main.gohtml
+++ b/web/views/layouts/main.gohtml
@@ -19,8 +19,8 @@
   </head>
 
   <body class="">
-    {{ include "partials/header.gohtml" }}
+    {{ template "partials/header" . }}
     {{ embed }}
-    {{ include "partials/footer.gohtml"}}
+    {{ template "partials/footer" . }}
   </body>
 </html>
