--- a/web/views/partials/header.gohtml
+++ b/web/views/partials/header.gohtml
@@ -2,16 +2,15 @@
   <div class="container">
     <a class="navbar-brand" href="/">conduit</a>
     <ul class="nav navbar-nav pull-xs-right">
-      <li class="nav-item">
-        <!-- Add "active" class when you're on that page" -->
-        <a class="nav-link active" href="/">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/login">Sign in</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/register">Sign up</a>
-      </li>
+      {{ range .Links }}
+        <li class="nav-item">
+          <a
+            class="nav-link {{ if eq $.Page .Uri }}active{{ end }}"
+            href="{{ .Uri }}"
+            >{{ .Title }}</a
+          >
+        </li>
+      {{ end }}
     </ul>
   </div>
 </nav>
