--- a/web/views/partials/header.gohtml
+++ b/web/views/partials/header.gohtml
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light">
+<nav class="navbar navbar-light" hx-boost="true">
   <div class="container">
     <a class="navbar-brand" href="/">conduit</a>
     <ul class="nav navbar-nav pull-xs-right">
