--- a/web/views/auth.gohtml
+++ b/web/views/auth.gohtml
@@ -7,26 +7,43 @@
           <a href="/register">Need an account?</a>
         </p>
 
-        <ul class="error-messages">
+        <ul class="error-messages" hidden>
           <li>That email is already taken</li>
         </ul>
 
-        <form>
+        <form id="authen">
+          {{ if .IsRegister }}
+            <fieldset class="form-group">
+              <input
+                id="username"
+                name="username"
+                placeholder="Username"
+                class="form-control form-control-lg"
+                type="text"
+              />
+            </fieldset>
+          {{ end }}
           <fieldset class="form-group">
             <input
+              id="email"
+              name="email"
+              placeholder="Email"
               class="form-control form-control-lg"
               type="text"
-              placeholder="Email"
             />
           </fieldset>
           <fieldset class="form-group">
             <input
+              id="password"
+              name="password"
+              placeholder="Password"
               class="form-control form-control-lg"
               type="password"
-              placeholder="Password"
             />
           </fieldset>
-          <button class="btn btn-lg btn-primary pull-xs-right">Sign in</button>
+          <button class="btn btn-lg btn-primary pull-xs-right">
+            Sign {{ if .IsRegiter }}up{{ else }}in{{ end }}
+          </button>
         </form>
       </div>
     </div>
