--- a/web/views/auth.gohtml
+++ b/web/views/auth.gohtml
@@ -3,8 +3,12 @@
     <div class="row">
       <div class="col-md-6 offset-md-3 col-xs-12">
         <h1 class="text-xs-center">Sign in</h1>
-        <p class="text-xs-center">
-          <a href="/register">Need an account?</a>
+        <p class="text-xs-center" hx-boost="true">
+          {{ if .IsRegister }}
+            <a href="/login">Have an account?</a>
+          {{ else }}
+            <a href="/register">Need an account?</a>
+          {{ end }}
         </p>
 
         <ul class="error-messages" hidden>
