fix(views/auth): make button type submit

--- a/web/views/auth.gohtml
+++ b/web/views/auth.gohtml
@@ -56,6 +56,7 @@
             />
           </fieldset>
           <button class="btn btn-lg btn-primary pull-xs-right">
+          <button type="submit" class="btn btn-lg btn-primary pull-xs-right">
             Sign {{ if .IsRegiter }}up{{ else }}in{{ end }}
           </button>
         </form>
