fix(views/auth-errors): range w/ key val

--- a/web/views/partials/auth-errors.gohtml
+++ b/web/views/partials/auth-errors.gohtml
@@ -1,5 +1,5 @@
 <ul id="errors" class="error-messages" hx-swap-oob="true">
-  {{ range .Errors }}
-    <li>{{ . }}</li>
+  {{ range $key, $val := .Errors }}
+    <li>{{ $key }}: {{ $val }}</li>
   {{ end }}
 </ul>
