feat: add session on sqlite3

--- a/web/views/auth.gohtml
+++ b/web/views/auth.gohtml
@@ -54,7 +54,7 @@
           </fieldset>
 
           <button type="submit" class="btn btn-lg btn-primary pull-xs-right">
-            Sign {{ if .IsRegiter }}up{{ else }}in{{ end }}
+            Sign {{ if .IsRegister }}up{{ else }}in{{ end }}
           </button>
         </form>
       </div>
