feat(web/layout): add favicon

--- a/web/views/layouts/main.gohtml
+++ b/web/views/layouts/main.gohtml
@@ -14,6 +14,11 @@
       rel="stylesheet"
       type="text/css"
     />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://www.realworld.how/img/favicon.ico"
+    />
     <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
     <link rel="stylesheet" href="//demo.productionready.io/main.css" />
     <script
