fix(web/settings): hide errors on submit

--- a/web/views/settings.gohtml
+++ b/web/views/settings.gohtml
@@ -7,6 +7,7 @@
         <ul id="errors" class="error-messages" hidden></ul>
 
         <form
+          _="on submit add @hidden to #errors"
           id="settings"
           hx-post="/settings"
           hx-target="#settings"
