--- a/web/views/layouts/main.gohtml
+++ b/web/views/layouts/main.gohtml
@@ -26,6 +26,11 @@
       integrity="sha384-xcuj3WpfgjlKF+FXhSQFQ0ZNr39ln+hwjN3npfM9VBnUskLolQAcN80McRIVOPuO"
       crossorigin="anonymous"
     ></script>
+
+    <script
+      src="https://unpkg.com/hyperscript.org@0.9.11"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body class="">
