--- a/web/views/profile.gohtml
+++ b/web/views/profile.gohtml
@@ -44,7 +44,7 @@
               hx-trigger="load delay:250ms"
               hx-target="#articles"
             >
-              <a class="nav-link active"> My Articles </a>
+              <a class="nav-link active">My Articles</a>
             </li>
 
             <li
@@ -62,17 +62,10 @@
         </div>
 
         <div id="articles">
-          <div class="article-preview">No articles are here... yet.</div>
+          <div class="article-preview">Loading articles...</div>
         </div>
 
-        <ul id="paggination" class="pagination" hidden>
-          <li class="page-item active">
-            <a class="page-link" href="">1</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="">2</a>
-          </li>
-        </ul>
+        <ul id="paggination" class="pagination" hidden></ul>
       </div>
     </div>
   </div>
