--- a/internal/app/drivers/layout.templ
+++ b/internal/app/drivers/layout.templ
@@ -18,14 +18,13 @@ templ layout(p layoutProps) {
 		<head>
 			<meta charset="utf-8"/>
 			<title>Conduit</title>
-			<!-- Import Ionicon icons & Google Fonts our Bootstrap theme relies on -->
 			<link
- 				href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
+ 				href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
  				rel="stylesheet"
  				type="text/css"
 			/>
 			<link
- 				href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic"
+ 				href="https://fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic"
  				rel="stylesheet"
  				type="text/css"
 			/>
@@ -35,7 +34,7 @@ templ layout(p layoutProps) {
  				href="https://www.realworld.how/img/favicon.ico"
 			/>
 			<!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
-			<link rel="stylesheet" href="//demo.productionready.io/main.css"/>
+			<link rel="stylesheet" href="https://demo.productionready.io/main.css"/>
 			<script src="https://unpkg.com/htmx.org@1.9.5" integrity="sha384-xcuj3WpfgjlKF+FXhSQFQ0ZNr39ln+hwjN3npfM9VBnUskLolQAcN80McRIVOPuO" crossorigin="anonymous"></script>
 			<script src="https://unpkg.com/hyperscript.org@0.9.11" crossorigin="anonymous"></script>
 		</head>
@@ -78,7 +77,7 @@ templ header(p headerProps) {
 								class="nav-link"
 							}
 						>
-							{ p.title }
+							{ link.Title }
 						</a>
 					</li>
 				}
