feat(templ/index): filter by tag

--- a/internal/app/drivers/articles.templ
+++ b/internal/app/drivers/articles.templ
@@ -47,6 +47,7 @@ type articlesProps struct {
 	showPagination bool
 	numOfPages     int
 	currentPage    int
+	tag            string
 }
 
 templ articleList(p articlesProps) {
