fix(views/auth): remove errors on submit

--- a/internal/app/drivers/auth.templ
+++ b/internal/app/drivers/auth.templ
@@ -29,6 +29,7 @@ templ auth(p authProps) {
 							}
  							hx-target="body"
  							hx-swap="outerHTML"
+ 							_="on submit set { hidden: true } on #errors"
 						>
 							if p.isRegister {
 								<fieldset class="form-group">
