--- a/internal/app/drivers/layout.templ
+++ b/internal/app/drivers/layout.templ
@@ -1,6 +1,7 @@
 package drivers
 
 import "github.com/berkeleytrue/conduit/internal/core/services"
+import "fmt"
 
 type headerProps struct {
 	title  string
@@ -32,7 +33,7 @@ templ header(props headerProps) {
 				}
 				if props.userId != 0 {
 					<li class="nav-item">
-						<a class="nav-link" href="/profile/{ user.Username }}">
+						<a class="nav-link" href={ templ.URL(fmt.Sprintf("/profile/%s", props.user.Username)) }>
 							if props.user.Image != "" {
 								<img src={ props.user.Image } class="user-pic"/>
 							} else {
