--- a/internal/app/drivers/article.templ
+++ b/internal/app/drivers/article.templ
@@ -3,6 +3,65 @@ package drivers
 import "github.com/berkeleytrue/conduit/internal/core/services"
 import "fmt"
 
+templ actionsComp(isMyArticle, isFollowing, isFavorited bool, username, slug string) {
+	if !isMyArticle {
+		<button
+ 			if isFollowing {
+				hx-delete={ fmt.Sprintf("/profiles/%s/follow", username) }
+			} else {
+				hx-post={ fmt.Sprintf("/profiles/%s/follow", username) }
+			}
+ 			class="btn btn-sm btn-outline-secondary"
+		>
+			<i class="ion-plus-round"></i>
+			&nbsp; 
+			if isFollowing {
+				Unfollow
+			} else {
+				Follow
+			}
+			{ username }
+			<span class="counter">(?)</span>
+		</button>
+		&nbsp;&nbsp;
+		<button
+ 			if isFavorited {
+				hx-delete={ fmt.Sprintf("/articles/%s/favorite", slug) }
+			} else {
+				hx-post={ fmt.Sprintf("/articles/%s/favorite", slug) }
+			}
+ 			class="btn btn-sm btn-outline-primary"
+		>
+			<i class="ion-heart"></i>
+			&nbsp; 
+			if isFavorited {
+				Unfavorite
+			} else {
+				Favorite
+			}
+			Post
+			<span class="counter">(?)</span>
+		</button>
+	} else {
+		<button
+ 			hx-get={ fmt.Sprintf("/editor/%s", slug) }
+ 			class="btn btn-sm btn-outline-secondary"
+ 			hx-select="body"
+ 			hx-target="body"
+		>
+			<i class="ion-edit"></i>
+			Edit Article
+		</button>
+		<button
+ 			hx-delete={ fmt.Sprintf("/articles/%s", slug) }
+ 			class="btn btn-sm btn-outline-danger"
+		>
+			<i class="ion-trash-a"></i>
+			Delete Article
+		</button>
+	}
+}
+
 type articleProps struct {
 	services.ArticleOutput
 	layoutProps
@@ -27,36 +86,7 @@ templ article(props articleProps) {
 							</a>
 							<span class="date">{ props.CreatedAt.ToString() }</span>
 						</div>
-						<button class="btn btn-sm btn-outline-secondary">
-							<i class="ion-plus-round"></i>
-							&nbsp; Follow
-							{ props.Author.Username }
-							<span class="counter">(10)</span>
-						</button>
-						&nbsp;&nbsp;
-						<button class="btn btn-sm btn-outline-primary">
-							<i class="ion-heart"></i>
-							&nbsp; Favorite Post
-							<span class="counter">(29)</span>
-						</button>
-						if props.isMyArticle {
-							<button
- 								hx-get={ fmt.Sprintf("/editor/%s", props.Slug) }
- 								class="btn btn-sm btn-outline-secondary"
- 								hx-select="body"
- 								hx-target="body"
-							>
-								<i class="ion-edit"></i>
-								Edit Article
-							</button>
-							<button
- 								hx-delete={ fmt.Sprintf("/articles/%s", props.Slug) }
- 								class="btn btn-sm btn-outline-danger"
-							>
-								<i class="ion-trash-a"></i>
-								Delete Article
-							</button>
-						}
+						@actionsComp(props.isMyArticle, props.Author.IsFollowing, props.IsFavorited, props.Author.Username, props.Slug.String())
 					</div>
 				</div>
 			</div>
@@ -85,27 +115,7 @@ templ article(props articleProps) {
 							</a>
 							<span class="date">{ props.CreatedAt.ToString() }</span>
 						</div>
-						<button class="btn btn-sm btn-outline-secondary">
-							<i class="ion-plus-round"></i>
-							&nbsp; Follow
-							{ props.Author.Username }
-						</button>
-						&nbsp;
-						<button class="btn btn-sm btn-outline-primary">
-							<i class="ion-heart"></i>
-							&nbsp; Favorite Article
-							<span class="counter">(29)</span>
-						</button>
-						if props.isMyArticle {
-							<button class="btn btn-sm btn-outline-secondary">
-								<i class="ion-edit"></i>
-								Edit Article
-							</button>
-							<button class="btn btn-sm btn-outline-danger">
-								<i class="ion-trash-a"></i>
-								Delete Article
-							</button>
-						}
+						@actionsComp(props.isMyArticle, props.Author.IsFollowing, props.IsFavorited, props.Author.Username, props.Slug.String())
 					</div>
 				</div>
 				<div class="row">
